--- a/property.html
+++ b/property.html
@@ -91,7 +91,7 @@
                         <div class="video-poster-container" id="videoPosterContainer">
                             <img src="assets/images/dominion-logo.png" alt="Dominion Real Estate Investors" class="video-poster-logo">
                             <div class="video-play-button"></div>
-                            <video id="propertyVideo" controls class="w-100">
+                            <video id="propertyVideo" controls muted class="w-100">
                                 Your browser does not support the video tag.
                             </video>
                         </div>
